--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <table cellspacing="20">
         <tr>
             <td><img height="200px" src="image/profile.png" alt="John Profile Pic"></td>
-            <td><h1>John Doe</h1>
+            <td><h1>Anup Shreshta</h1>
                 <p><em>Founder and CTO of <strong><a href="https://www.apple.com/app-store/">THE APP</a></strong>.</em></p>
-                <p>I am a Software Engineer. I love to travel and eat foods.</p>
+                <p>I am learning how to build websites. I love to travel and eat foods.</p>
             </td>
         </tr>
     </table>
@@ -47,15 +47,15 @@
     <table cellspacing="10">
         <tr>
             <td>Front End Development</td>
-            <td>⭐⭐⭐⭐</td>
+            <td>⭐</td>
         </tr>
         <tr>
             <td>Back End Development</td>
-            <td>⭐⭐⭐⭐⭐</td>
+            <td>⭐</td>
         </tr>
         <tr>
-            <td>Dev Ops</td>
-            <td>⭐⭐⭐⭐</td>
+            <td>Cooking</td>
+            <td>⭐⭐⭐</td>
         </tr>        
     </table>
     <hr>
