--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <table cellspacing="20">
         <tr>
             <td><img height="200px" src="image/profile.png" alt="John Profile Pic"></td>
-            <td><h1>Anup Shreshta</h1>
+            <td><h1>Anup Shrestha</h1>
                 <p><em>Founder and CTO of <strong><a href="https://www.apple.com/app-store/">THE APP</a></strong>.</em></p>
                 <p>I am learning how to build websites. I love to travel and eat foods.</p>
             </td>
